# DeliveryService

./: .dockerignore  .env  .env.ci  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/app/: main.py
src/app/api/routes/: company.py  parcel_types.py  parcels.py
src/app/cache/: cache_init.py
src/app/core/: config.py  healthcheck.py  logger.py
src/app/db/: dependencies.py  session.py
src/app/db/models/: __init__.py  company.py  package.py  package_type.py
src/app/metrics/: consumer_metrics.py  delivery_metrics.py
src/app/migrations/: env.py
src/app/migrations/versions/: 15b557f30f39_add_package_types.py  671e97022596_initial_tables.py
src/app/mongo/: settings.py
src/app/rabbitmq/: consumer.py  publisher.py
src/app/schemas/: company.py  parcel.py  parcel_type.py  tasks.py
src/app/services/: company.py  delivery.py  package_type.py  parcel.py
tests/: conftest.py
tests/unit/: test_parcel.py  test_parcel_type.py
